manifests/02-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 442426896735.dkr.ecr.ap-south-1.amazonaws.com/app-backend:91607abd30f5719e711a78f161b10833872fb708 # <-- YOUR NEW IMAGE!
          ports:
            - containerPort: 8080
