manifests/03-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 442426896735.dkr.ecr.ap-south-1.amazonaws.com/app-frontend:91607abd30f5719e711a78f161b10833872fb708 # <-- YOUR NEW IMAGE!
          ports:
            - containerPort: 80
